# calc_cavity_volume

./: README.md  calc_cavity_solution.py  pyproject.toml  setup.cfg
